# vianu-fraudcrawler

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMPTFLOW.md  README.md  __init__.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
fraudcrawler/: __init__.py  launch_demo_pipeline.py  settings.py
fraudcrawler/base/: base.py  client.py  launch_demo_pipeline.py  orchestrator.py  settings.py
fraudcrawler/crawling/: zyte.py
fraudcrawler/processing/: assessor.py  processor.py
fraudcrawler/scraping/: enrich.py  serp.py  zyte.py
src/: __init__.py  base.py  client.py  enrichment.py  enrichment_utils.py  processor.py  search.py  serpapi.py  settings.py  zyte.py  zyteapi.py
src/collect/: enrich.py  serp.py  zyte.py
tests/unittests/: test_base.py  test_collect.py  test_processing.py  test_scraping.py  test_search.py  test_serpapi.py
